16777
{code:borderStyle=solid}
hello.scala:5: error: method toString overrides nothing
        override def toString = "Hello, world!"
                     ^
 {code} 

The above error is the result when trying to compile the class below with scalacompiler.exe
 
 
{code:title=Bar.java|borderStyle=solid}
  object HelloWorld {
    def main(args: Array[String]) {
      println(toString)
    }
    override def toString = "Hello, world!"
  }
 {code} 

